# jream

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  beam_defs.h  beamparser  beamparser.cpp  clang-riscv-TC.cmake  cmake_install.cmake  compile_commands.json  conanfile.txt  exceptions.cpp  exceptions.h  execution.cpp  external_term.cpp  external_term.h  hello.S  main.cpp  op_arity.h  riscv-TC.cmake
assembly/: allocate.S  allocate_m.S  badmatch_m.S  bif_m.S  call.S  call_ext.S  call_ext_bif.S  call_ext_bif_m.S  call_ext_m.S  call_ext_only_bif_m.S  call_finish.S  call_finish_m.S  call_fun.S  call_fun_m.S  call_last_m.S  call_m.S  call_only_m.S  call_setup.S  call_setup_m.S  compile_stub.S  compile_stub_m.S  deallocate.S  deallocate_m.S  debug_execute_aribitrary.S  debug_execute_aribitrary_m.S  debug_set_flag.S  do_comp_m.S  enter_func.S  enter_func_m.S  enter_label.S  erl_add_m.S  erl_bsr_m.S  erl_bxor_m.S  erl_error_m.S  erl_mul_m.S  erl_sub_m.S  get_list.S  get_list_m.S  get_tl_m.S  get_tuple_element_m.S  (+48 more)
assembly/ops/: allocate.S  allocate_m.S  call.S  call_fun.S  call_fun_m.S  call_m.S  deallocate.S  deallocate_m.S
assembly/test_ops/: test.S
benchmarks/: coverage.erl  gray.erl  merge.erl  parallel.erl  ring.S  ring.erl
benchmarks/coverage/: hello_world.erl
benchmarks/scripts/: check_sorted.py  gray.py  run.sh  run_mem.sh
include/: allocator.hpp  asm_callable.h  asm_callable.hpp  asm_snippets.hpp  asm_utility.h  asm_utility.hpp  beam_defs.h  beam_defs.hpp  beamparser.hpp  bif.hpp  exceptions.hpp  execution.h  execution.hpp  external_term.h  external_term.hpp  garbage_collection.hpp  instr_code.h  int_from_bytes.hpp  messages.hpp  op_arity.h  op_arity.hpp  parsing.hpp  pcb.h  pcb.hpp  precompiled.hpp  profiler.hpp  riscv_gen.hpp  setup_logging.hpp  translation.hpp
reference/: .gdbinit  .gray.erl.swp  ackermann.erl  add.S  beamparser.beam  beamparser.erl  branch.S  check_sorted.py  generate_list.py  generate_reversed.py  genop.tab  gprof.txt  gray.S  gray.erl  gray.py  gray_debug.erl  hello.P  hello.S  hello.beam  list.S  list.erl  merge.S  merge.beam  merge.erl  merge_sort.S  merge_sort.beam  merge_sort.erl  only_merge.S  only_merge.erl  out.txt  profile.dot  test.cpp  test.erl  visualise.sh
reference/ops/: call_fun.S  get_code.sh  load.S  setup.S  teardown.S  test.S
scripts/: genopconvert_FIXTHIS.py  get_binary.sh  instr_code_gen.py  meta_assembly_compile.py  print_asm.py  riscv_from_meta.sh  shared_variables.py  shared_variables_gen.py  visualise.sh
src/: asm_callable.cpp  beam_defs.cpp  beamparser.cpp  bif.cpp  exceptions.cpp  execution.cpp  external_term.cpp  garbage_collection.cpp  main.cpp  pcb.cpp  precompiled.cpp  profiler.cpp  setup_logging.cpp  translation.cpp  trial_jit.cpp
tests/: CMakeLists.txt  test_main.cpp
